<?xml version="1.0"?>
<package format="2">
  <name>defense_bringup</name>
  <version>0.0.0</version>
  <description>The defense_bringup package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>defense_description</exec_depend>
  <exec_depend>iiwa_control</exec_depend>
  <exec_depend>iiwa_hw</exec_depend>
  <exec_depend>iiwa_control</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
